--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.12.1",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
+    "mobx": "^6.6.0",
+    "mobx-state-tree": "^5.1.5",
+    "mst-async-storage": "^0.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
