--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.17.6",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
     "mobx": "^6.6.0",
     "mobx-react-lite": "^3.4.0",
     "mobx-state-tree": "^5.1.5",
-    "mst-async-storage": "^0.4.0",
+    "mst-async-storage": "https://github.com/danstepanov/mst-async-storage.git",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
